# frame-extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  app.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  wrangler.jsonc
src/: index.html  styles.css
src/app/: app.css  app.html  app.spec.ts  app.ts
